feat: Replace 'new' with 'reveal'

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="actions">
                 <button type="submit" id="submit">Submit</button>
                 <button type="button" id="reset">Reset</button>
-                <button type="button" id="new">Reveal</button>
+                <button type="button" id="reveal">Reveal</button>
             </div>
         </form>
 
