--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div id="main-container" class="hidden">
+    <div id="main-container">
 
         <div class="game-title">
             <img src="./img/logo.png" alt="Man guessing something">
