--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                 <button type="submit" id="submit">Submit</button>
                 <button type="button" id="reset">Reset</button>
                 <button type="button" id="reveal">Reveal</button>
+                <button type="button" id="enter">Enter word</button>
+                <button type="button" id="random">Random</button>
             </div>
         </form>
 
